Fix Quick Add field being cut off on Firefox Mobile by using svh instead of dvh.

--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@
   padding-inline: 1rem;
   padding-block-start: 1rem;
   padding-block-end: 0;
-  height: 100dvh;
+  height: 100svh;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
